--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,6 @@ gpio_modules:
     module: raspberrypi
 
 digital_outputs:
-  # Pin 1 is an output connected to a light
   - name: pool_acid_pump
     module: rpi
     pin: 19
@@ -27,23 +26,17 @@ digital_outputs:
     ha_discovery:
       name: Pool Acid Pump
 
-# Sensors
-# sensor_modules:
-#   # An LM75 sensor attached to the I2C bus
-#   - name: lm75_sensor
-#     module: lm75
-#     i2c_bus_num: 1
-#     chip_addr: 0x48
+sensor_modules:
+  - name: adc
+    module: ads1x15
+    type: ADS1115
+    i2c_bus_num: 1
+    chip_addr: 0x48
 
-# sensor_inputs:
-#   # The configuration of the specific sensor value to use (LM75 only has temperature)
-#   - name: porch_temperature
-#     module: lm75_sensor
-
-# # Streams
-# stream_modules:
-#   # A serial port to communicate with the house alarm system
-#   - name: alarm_system
-#     module: serial
-#     device: /dev/ttyUSB0
-#     baud: 9600
+sensor_inputs:
+  - name: pool_filter_pressure
+    module: adc
+    type: temperature
+    interval: 15
+    ha_discovery:
+      name: Pool Filter Pressure
