Add mqtt topic prefix and client id
- topic prefix avoids potential conflicts with other devices (particularly for the status topic)
- client id provides stability if topic changes again in future

--- a/config.yaml
+++ b/config.yaml
@@ -5,6 +5,8 @@ mqtt:
   status_payload_running: available
   status_payload_stopped: unavailable
   status_payload_dead: unavailable
+  client_id: mqtt-io-pool
+  topic_prefix: mqtt-io-pool
   ha_discovery:
     enabled: true
     name: "Raspberry Pi Zero-Pool MQTT-IO"
