Retain output to attempt to fix unavailable after HA restart
The pool pump switch was recently unavailable, possibly because of a HA restart, or maybe because I enabled IPv6. I'm not sure exactly how this will interact with status, but it seems logical HA should receive/have access to the current start regardless of restarts.

--- a/config.yaml
+++ b/config.yaml
@@ -25,5 +25,6 @@ digital_outputs:
     timed_set_ms: 10000
     initial: "high"
     publish_initial: true
+    retain: true
     ha_discovery:
       name: Pool Acid Pump
